--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.django
+      dockerfile: Dockerfile
     container_name: django
     volumes:
       - .:/usr/src/app:rw
@@ -30,7 +30,6 @@ services:
     depends_on:
       - db
     command: /bin/bash /usr/src/app/entrypoint.sh
-
 
 volumes:
   db_data:
